--- a/ARIN_Course_03_BetterApproach.ipynb
+++ b/ARIN_Course_03_BetterApproach.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1hIDooTc-EQd6FuSRcq_NtpggnM8BkxkT",
-      "authorship_tag": "ABX9TyNZn8LGf/BFPZsnqPHq6OSO",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNZn8LGf/BFPZsnqPHq6OSO"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/DannyNguyen24-Vietnam/Artificial-Intelligence-Course-A-better-visualization-approach---Week-03/blob/main/ARIN_Course_03_BetterApproach.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -51,7 +40,7 @@
       "metadata": {
         "id": "gSQgLS_liOEx"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +53,7 @@
       "metadata": {
         "id": "KoZQey1mz1Aw"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +70,7 @@
         "id": "Fu2IL9Y0z1L_",
         "outputId": "8ebf6e6b-6aa8-4f6c-a9db-9e5c345ca188"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -373,7 +362,7 @@
         "id": "zj5Wx7S81TFF",
         "outputId": "4faff62b-8498-4edb-9619-26b4f7a04066"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +446,7 @@
         "id": "AUQDfU4sRz_0",
         "outputId": "1a459b54-9376-41d3-c933-9f70809bc344"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,7 +493,7 @@
         "id": "Vt9SwkPuSWOE",
         "outputId": "b3ff2166-ec84-44b3-d976-490847cee74f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +540,7 @@
         "id": "SiMqNL7LS_fd",
         "outputId": "1c9b6217-2038-4bba-a8c6-500ad8f2e7fd"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -667,7 +656,7 @@
       "metadata": {
         "id": "H6Uu0vbcWb7l"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -693,7 +682,7 @@
         "id": "ugFXHbeeYiM8",
         "outputId": "b0fc1c03-b287-444b-eb0f-99b27d3123b8"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -731,7 +720,7 @@
         "id": "DNpDHyGikJDA",
         "outputId": "9eceb839-2435-442a-d407-aa824d63986b"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -776,7 +765,7 @@
         "id": "5Len-ceXk0F3",
         "outputId": "013d008d-66f1-4269-b5b6-500ed70aa90f"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -814,7 +803,7 @@
         "id": "07EjwK4ylIwG",
         "outputId": "ea1d4fa9-1b35-4c8c-936a-25c1180ce4c7"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
